2009-07-08  Ed Reingold  <reingold@emr.cs.iit.edu>

	* calendar/calendar.el (calendar-current-date):
	Add an optional argument giving an offset from today.

2009-07-08  Glenn Morris  <rgm@gnu.org>

	* tutorial.el (tutorial--describe-nonstandard-key):
	Adjust the message for when a key has been unbound.
	(help-with-tutorial): Hide the arch-tag.

2009-07-08  Kenichi Handa  <handa@m17n.org>

	* language/japanese.el (japanese-shift-jis-2004): Fix typo in the
	docstring.

2009-07-08  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-mi.el (gdb-init-1): Move sending
	-data-list-register-names to ...
	(gdb-starting): ... here because GDB 7.0 requires execution to
	have started when using this MI command.
	(gdb-set-header): New function to distinguish select and
	unselected tabs in gdb buffers.
	(gdb-propertize-header): New macro that uses gdb-set-header.
	(gdb-breakpoints-header, gdb-locals-header): Use it.

2009-07-07  Chong Yidong  <cyd@stupidchicken.com>

	* Makefile.in (ELCFILES): Remove fadr.elc.

2009-07-07  Dmitry Dzhus  <dima@sphinx.net.ru>

	* progmodes/gdb-mi.el (gdb-init-1): Disassembly buffer mode name
	may contain frame information, so `string-match' should be used.
	(gdb-update): Disassembly is invalidated through
	`gdb-get-selected-frame'.
	(gdb-pad-string): New function to pad string with spaces.
	(gdb-invalidate-disassembly): Invalidate only if the buffer
	exists.
	(gdb-disassembly-handler-custom): Column alignment.
	(gdb-disassembly-place-breakpoints): Clear old breakpoints before
	placing new ones.
	(gdb-toggle-breakpoint, gdb-delete-breakpoint): Now work from the
	end of line, too.
	(gdb-frame-handler): Match convention to for disassembly buffer
	mode name.
	(gdb-stack-list-frames-handler): Rewritten without regexps.
	(gdb-breakpoints-list-handler-custom): y/n instead of on/off; do
	not highlight breakpoints without line information.
	(gdb-input): Add trailing newline to command.

	* progmodes/gdb-mi.el (gdb-init-1): Set mode name for disassembly