@@ -1,3 +1,7 @@
+2009-07-08  Glenn Morris  <rgm@gnu.org>
+
+	* calendar/calendar.el (calendar-current-date): Rework previous change.
+
 2009-07-08  Ed Reingold  <reingold@emr.cs.iit.edu>
 
 	* calendar/calendar.el (calendar-current-date):
